# SymCpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakelists.txt  debug.cpp  main.cpp
include/: Matrix2D.hpp
include/Boundarys/: Boundarys.hpp
include/Coil/: RectangleCoil.hpp
include/Media/: AlleyAir.hpp  BTAir.hpp  EnumTypes.h  FerriteCurrent.hpp  NormalAir.hpp
include/Regions/: AllRegions.hpp  BasicCase.hpp  Case1.hpp  Case2.hpp  Region.hpp  RegionsInput.hpp  split_curve_by_rects_by_points.hpp
src/Boundarys/: Boundarys.cpp
src/Coil/: RectangleCoil.cpp
src/Region/: AllRegions.cpp  BasicCase.cpp  Case1.cpp  Case2.cpp  Region.cpp  RegionsInput.cpp
